@@ -1,3 +1,9 @@
+1999-09-24  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* unix/Makefile.in: changed 'mkdir' to 'mkdir -p'
+	* library/dialog.tcl: changed {Times 18} to {Times 12} for
+	dialog font.
+
 1999-09-23  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* README:
